EventRelay/force-app/main/default/objects/Order_History__c/Order_History__c.object-meta.xml
<CustomObject>
    <label>Order History</label>
    <pluralLabel>Order History</pluralLabel>
    <nameField>
        <label>History Number</label>
        <type>AutoNumber</type>
        <displayFormat>HIST-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>