EventRelay/force-app/main/default/objects/Order_History__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order History</relationshipLabel>
    <relationshipName>Order_History</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>